--- a/pom.xml
+++ b/pom.xml
@@ -13,15 +13,16 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<sonar.buildVersion>3.5.1</sonar.buildVersion>
+		<sonar.buildVersion>5.1</sonar.buildVersion>
 		<jdk.min.version>1.6</jdk.min.version>
+		<jacoco-maven-version>0.7.4.201502262128</jacoco-maven-version>
 	</properties>
 
 	<dependencies>
 		<dependency>
 			<groupId>org.yaml</groupId>
 			<artifactId>snakeyaml</artifactId>
-			<version>1.12</version>
+			<version>1.15</version>
 		</dependency>
 
 		<dependency>
@@ -68,6 +69,16 @@
 			<version>2.2.1</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-log4j12</artifactId>
+			<version>1.7.12</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-configuration</groupId>
+			<artifactId>commons-configuration</artifactId>
+			<version>1.9</version>
+		</dependency>
 			
 	</dependencies>
 
@@ -85,7 +96,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>2.5.1</version>
+				<version>3.2</version>
 				<configuration>
 					<source>${jdk.min.version}</source>
 					<target>${jdk.min.version}</target>
@@ -108,7 +119,7 @@
 			<plugin>
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
-				<version>0.6.3.201306030806</version>
+				<version>${jacoco-maven-version}</version>
 				<configuration>
 					<destfile>${basedir}/target/jacoco.exec</destfile>
 				</configuration>
@@ -131,12 +142,12 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.15</version>
+				<version>2.18.1</version>
 				<dependencies>
 					<dependency>
 						<groupId>org.apache.maven.surefire</groupId>
 						<artifactId>surefire-junit47</artifactId>
-						<version>2.15</version>
+						<version>2.18.1</version>
 					</dependency>
 				</dependencies>
 			</plugin>
